# fractal-analytics-platform.github.io

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  _config.yml  fractal-web-reference.txt  index.html  index.md  mkdocs.yml  pyproject.toml  requirements.txt  ruff.toml  test-index.md  v2.md  zensical.toml
.github/: dependabot.yml
.github/workflows/: documentation.yaml  links.yaml  task_list.yaml
_includes/: youtube.html
available_tasks/: index.html
build_your_own_fractal_task/: index.html
docs/: available_tasks.md  build_your_own_fractal_task.md  fractal_tasks.md  fractal_templates.md  image_list.md  index.md  run_fractal.md  tasks_spec.md  v2.md
docs/news/: 2025-04-28-fractal-flexibility.md  2025-12-17-fractal-project-sharing.md  20250428_fractal_flexibility.md  2026-03-31-fractal-workflow-templates.md  2026-06-30-napari-plugins-for-ome-zarr.md  index.md
docs/version_2/: image_list.md  index.md  tasks.md
fractal-tasks/: index.html
fractal-tasks/_app/: version.json
fractal_tasks/: index.html
image_list/: index.html
news/: index.html
run_fractal/: index.html
search/: search_index.json
task-table/: index.html
tasks_data_retrieval/: create_tasks_data.py  install_instructions.py  pyproject.toml  requirements.txt  sources.txt
tasks_spec/: index.html
templates_data_retrieval/: .gitignore  basic_threshold_measurement_workflow.json  create_templates_data.py  drug_profiling.json  hiPSC_Cellpose_SAM_measurements.json  zarr_v3_hipsc.json
tools/: full_local_build.sh  preview_artifact.sh
version_2/: index.html
(+1111 files in other folders)
